--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,7 +82,15 @@ body {
     @apply px-5 sm:~px-8/16;
   }
 
+  .section-heading {
+    @apply font-semibold text-white ~text-3xl/5xl ~mb-4/5 ~leading-[3rem]/[4.8rem];
+  }
+
   /* Gradients */
+  .black-gradient {
+    @apply bg-black-gradient;
+    filter: blur(5px);
+  }
 
   .blue-gradient {
     @apply bg-blue-gradient;
